<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green">

    <Button
        android:id="@+id/sort_by_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:onClick="set_rank_highest_score"
        android:text="Score"
        app:layout_constraintEnd_toStartOf="@+id/sort_by_top_code"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sort_by_top_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:onClick="set_rank_highest_code"
        android:text="Best Score"
        app:layout_constraintEnd_toStartOf="@+id/sort_by_num_scans"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sort_by_score"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sort_by_num_scans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="40dp"
        android:text="Scans"
        android:onClick="set_rank_number_codes_scanned"
        app:layout_constraintEnd_toStartOf="@+id/relativeLayout"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sort_by_top_code"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100dp"
        tools:context=".LeaderBoard"
        tools:layout_editor_absoluteX="-88dp"
        tools:layout_editor_absoluteY="-16dp">


        <TextView
            android:id="@+id/leaderBoardTextViewRankByScore"
            android:layout_width="376dp"
            android:layout_height="wrap_content"
            android:text="USER RANK BY SCORE: "
            android:textColor="@color/quantum_googblue"
            android:textSize="20dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/leaderBoardRecycleView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:padding="20dp"
            android:layout_below="@+id/leaderBoardTextViewRankByScore"
            android:layout_marginTop="5dp"></androidx.recyclerview.widget.RecyclerView>


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_fragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:menu="@menu/menu_bottom_nav" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>